# GramineCRISP

./: meson.build
CI-Examples/crisp-tag-test/: checker_query.py  main  main.c  main.checker.manifest.template  main.manifest.template  main.mode.manifest.template  main.sync.manifest.template  run_checker_expected_min.sh  run_mode_parse_tests.sh  run_sync_close_smoke.sh
CI-Examples/crisp-vault-test/: main  main.c  main.manifest.template
CI-Examples/intercept/: .gdb_history  a.txt  main  main.c  main.manifest.template
CI-Examples/pf-demo/: main  main.c  main.manifest.template
CI-Examples/test/: test  test.c  test.manifest.template
docs/: crisp_profile_analysis.py  emmc.py  exploit2.py  full_exploit.py  main_old.c  mainf3check.c  mariadb.py  microbench.py  microbench_profile.csv  microbench_results.csv  redis.py  spire.py  spire_server.py  sqlite.py  syscall_test.py
docs/Brainstorm/: CRISP_GRAMINE_IMPLEMENTATION_SPEC.md  backlog.md
docs/benchmarking/: redis.py  redis_profile.csv  redis_results.csv  spire.py  spire_profile.csv  spire_results.csv  sqlite.py  sqlite_profile.csv  sqlite_results.csv
docs/benchmarking-intermediate-p/: microbench_profile_inter.csv  microbench_results_inter.csv  redis_profile_inter.csv  redis_profile_rebase.csv  redis_results_inter.csv  redis_results_rebase.csv  spire_profile_inter.csv  spire_results_inter.csv  sqlite_profile_inter.csv  sqlite_profile_rebase.csv  sqlite_results_inter.csv  sqlite_results_rebase.csv
docs/exploits/: close_sync.py  config_integrity.py  lib.py  mc_consistency.py  pf_data_freshness.py  vault_freshness.py
docs/microbench/: microbench.py  (+14 more)
tests/: meson.build  test_crisp_checker_api.c  test_crisp_close.c  test_crisp_config.c  test_crisp_init.c
(+34 files in other folders)
